--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-11 17:54:30 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-13 18:01:56 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{ul04,
+	Author = {Zoubin Ghahramani},
+	Date-Added = {2015-01-13 17:00:38 +0000},
+	Date-Modified = {2015-01-13 17:01:56 +0000},
+	Month = {09},
+	Title = {Unsupervised Learning URL: http://mlg.eng.cam.ac.uk/zoubin/papers/ul.pdf},
+	Year = {2004}}
 
 @misc{bdc13,
 	Author = {Shan Suthaharan},
