--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-11 21:00:31 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-14 22:05:00 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{ams03,
+	Author = {Wolfgang Karl H{\"a}rdle, L{\'e}opold Simar},
+	Date-Added = {2015-01-14 21:01:16 +0000},
+	Date-Modified = {2015-01-14 21:05:00 +0000},
+	Edition = {3},
+	Publisher = {Springer},
+	Title = {Applied Multivariate Statistical Analysis},
+	Year = {2012}}
 
 @book{tdwi11,
 	Author = {Philip Russom},
