--- a/apache_spark/thesis/thesis.tex
+++ b/apache_spark/thesis/thesis.tex
@@ -41,6 +41,7 @@
 \usepackage{amstext}
 \usepackage{amsfonts}
 \usepackage{mathrsfs}
+\usepackage[onehalfspacing]{setspace}
 
 %\usepackage[acronyms]{glossaries}
 \usepackage[acronym,style=long,toc=true,numberedsection=autolabel]{glossaries} 
