--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-13 18:01:56 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-15 22:59:30 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{km11,
+	Author = {E. M. Mirkes},
+	Date-Added = {2015-01-15 19:31:45 +0000},
+	Date-Modified = {2015-01-15 21:59:30 +0000},
+	Howpublished = {University of Leicester},
+	Month = {01},
+	Title = {University of Leicester: K-means and K-medoids URL: \url {http://www.math.le.ac.uk/people/ag153/homepage/KmeansKmedoids/Kmeans_Kmedoids.html}},
+	Year = {2011}}
 
 @misc{ul04,
 	Author = {Zoubin Ghahramani},
