--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,56 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-14 22:05:00 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-16 01:49:01 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{kd06,
+	Author = {Johannes A{\ss}falg, Christian B{\"o}hm, et. al},
+	Date-Added = {2015-01-16 00:28:17 +0000},
+	Date-Modified = {2015-01-16 00:48:07 +0000},
+	Publisher = {Ludwig Maximilians Universit{\"a}t M{\"u}nchen, Institut f{\"u}r Informatik},
+	Title = {Knowledge Discovery in Databases},
+	Year = {2003}}
+
+@book{cm05,
+	Author = {Nikhil R. Pal, Kuhu Pal, et. al},
+	Date-Added = {2015-01-15 23:57:32 +0000},
+	Date-Modified = {2015-01-16 00:49:01 +0000},
+	Number = {4},
+	Publisher = {IEEE TRANSACTIONS ON FUZZY SYSTEMS},
+	Title = {A Possibilistic Fuzzy c-Means Clustering Algorithm},
+	Volume = {13},
+	Year = {2005}}
+
+@book{ma08,
+	Author = {Chuong B Do, Serafim Batzoglou},
+	Date-Added = {2015-01-15 23:49:59 +0000},
+	Date-Modified = {2015-01-15 23:50:56 +0000},
+	Publisher = {Nature Publishing Group},
+	Title = {What is the expectation maximization algorithm?},
+	Year = {2008}}
+
+@book{ncs06,
+	Author = {Benjamin J. Anderson, Deborah S. Gross, et al. },
+	Date-Added = {2015-01-15 23:28:13 +0000},
+	Date-Modified = {2015-01-15 23:30:28 +0000},
+	Publisher = {Carleton College, Northfield Minnesota},
+	Title = {Adapting K-Medians to Generate Normalized Cluster Centers},
+	Year = {2006}}
+
+@book{cl02,
+	Author = {Raymond T. Ng},
+	Date-Added = {2015-01-15 22:53:32 +0000},
+	Date-Modified = {2015-01-15 22:55:46 +0000},
+	Month = {10},
+	Number = {DOI: 10.1109/TKDE.2002.1033770},
+	Publisher = {Dept. of Comput. Sci., British Columbia Univ., Vancouver, BC; IEEE Transactions on Knowledge and Data Engineering (Impact Factor: 1.82)},
+	Title = {CLARANS: a method for clustering objects for spatial data mining},
+	Year = {2002}}
 
 @book{ams03,
 	Author = {Wolfgang Karl H{\"a}rdle, L{\'e}opold Simar},
