--- a/apache_spark/thesis/thesis.tex
+++ b/apache_spark/thesis/thesis.tex
@@ -160,7 +160,7 @@
 %% Titel, Autor und Betreuer
 %%
 \fachbereich{Technik} 
-\studiengang{Medieninformatik-Online (Master)}
+\studiengang{Medieninformatik (Master)}
 \autor{Sascha P. Lorenz}
 \matrnr{501 63 21}
 \titel{Big Data Processing mit Apache Spark}
@@ -168,7 +168,7 @@
 \betreuerFeld{
   \begin{tabular}{llr}
     
-    \textbf{1. Betreuer} & Prof.~Dr.~Stefan~Edlich & Beuth Hochschule für Technik\\
+    \textbf{1. Betreuer} & Prof.~Dr.~Stefan~Edlich & Beuth Hochschule für Technik Berlin\\
     \textbf{2. Betreuer} & Prof.~Dr. Schiemann-Lillie & Hochschule Emden-Leer
   \end{tabular}
 }
